--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "js/app.js",
   "scripts": {
     "start": "concurrently --kill-others \"npm run watch\" \"npm run serve\"",
-    "serve": "nodemon js/app.js",
+    "serve": "nodemon js/app.js -q",
     "watch": "tsc --w",
     "build": "tsc"
   },
   "author": "sebastiangolian <sebastiangolian@gmail.com>",
   "dependencies": {
+    "@types/node": "^13.1.8",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
-    "nodemon": "^2.0.2"  
+    "nodemon": "^2.0.2"
   }
 }
