--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.exclude": {
+        ".vscode": true,
         "node_modules/": true,
+        "package-lock.json": true,
+        "README.md": true,
+        ".gitignore": true
       }
 }
